bad/while_cond_array.example_compiler_output
ERROR
[1mbad/while_cond_array.lat:3:8: [1;31merror: [0;1mwhile condition has to be of type `boolean`, not `int[]`[m
	while(new int[3]) {}
	      [1;32m^[m
